--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body>
     <div class="container">
         <h1>Download Our Mobile App</h1>
-        <p>Get our app for your mobile device and enjoy seamless access to all features!</p>
+        <p>Get our app for your mobile device and enjoy seamless access to all !</p>
         <a href="/path/to/your-app.apk" class="button android">Download for Android (APK)</a>
         <a href="/path/to/your-app.ipa" class="button ios">Download for iOS (IPA)</a>
     </div>
