--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 <body>
     <div class="container">
         <h1>NEO Product Center</h1>
+        <img src="main_logo.png">
         <p>แอพพลิเคชั่น Product Center สำหรับทดสอบ</p>
         <a href="https://drive.google.com/file/d/1QnNVD8y_YXBBdvYKPX5ZdbDt2sk5LFu-/view?usp=share_link0" class="button android">Download for Android (APK)</a>
         <a href="/path/to/your-app.ipa" class="button ios">Download for iOS (IPA)</a>
