--- a/index.html
+++ b/index.html
@@ -22,22 +22,19 @@
         }
         h1 {
             color: #333;
-              text-align: left;
+            text-align: left;
         }
         p {
             color: #666;
             line-height: 1.6;
-              text-align: left;
+            text-align: left;
         }
         .button {
             display: inline-block;
-
             padding: 10px 20px;
             color: white;
             text-decoration: none;
             border-radius: 5px;
-            
-            
         }
         .button.android {
             background-color: #3ddc84;
@@ -45,18 +42,24 @@
         .button.ios {
             background-color: #D0D6DD;
             pointer-events: none;
-  			cursor: default;
+            cursor: default;
         }
         .flex-container {
-  			display: flex;
-  			align-items: stretch;
-		}
-
-		.flex-container > div {
-			color: white;
-			text-align: center;
-			font-size: 18px;
-		}
+            display: flex;
+            align-items: stretch;
+        }
+        .flex-container > div {
+            color: white;
+            text-align: center;
+            font-size: 18px;
+	    margin: 10px;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 10px; 
+        }
+    </style>
     </style>
 </head>
 <body>
@@ -64,13 +67,13 @@
 		<img src="main_logo.png">
         <h1>NEO Product Center</h1>
         <div class="flex-container">
-			<div style="flex-grow: 1">
-				<a href="https://drive.google.com/file/d/1QnNVD8y_YXBBdvYKPX5ZdbDt2sk5LFu-/view?usp=share_link0" class="button android">Download for Android (APK)</a>
-			</div>
-			<div style="flex-grow: 1">
-				<a href="" class="button ios">Download for iOS (IPA)</a>
-			</div>
+		<div style="flex-grow: 1">
+			<a href="https://drive.google.com/file/d/1QnNVD8y_YXBBdvYKPX5ZdbDt2sk5LFu-/view?usp=share_link0" class="button android">Download for Android (APK)</a>
 		</div>
+		<div style="flex-grow: 1">
+			<a href="" class="button ios">for iOS (coming soon)</a>
+		</div>
+	</div>
         <p>***แอพพลิเคชั่น Product Center สำหรับทดสอบ</p>
     </div>
 </body>
