--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			<a href="https://drive.google.com/file/d/1QnNVD8y_YXBBdvYKPX5ZdbDt2sk5LFu-/view?usp=share_link0" class="button android">Download for Android (APK)</a>
 		</div>
 		<div style="flex-grow: 1">
-			<a href="" class="button ios">for iOS (coming soon)</a>
+			<a href="" class="button ios">iOS (coming soon)</a>
 		</div>
 	</div>
         <p>***แอพพลิเคชั่น Product Center สำหรับทดสอบ</p>
