--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         }
         h1 {
             color: #333;
-            text-align: left;
+            text-align: center;
         }
         p {
             color: #666;
             line-height: 1.6;
-            text-align: left;
+            text-align: center;
         }
         .button {
             display: inline-block;
