--- a/index.html
+++ b/index.html
@@ -42,8 +42,6 @@
         }
         .button.ios {
             background-color: #D0D6DD;
-            pointer-events: none;
-            cursor: default;
         }
         .flex-container {
             display: flex;
@@ -64,30 +62,17 @@
 </head>
 <body>
     <div class="container">
-	<img src="main_logo.png">
-        <h1>NEO Product Center (Qas)</h1>
+	<img src="neo_mart_logo.png">
+        <h1>NEO-Mart (Qas)</h1>
         <div class="flex-container">
 		<div >
-			<a href="https://drive.google.com/file/d/1tVdJ0BU93Wrwda3Xsi5FVsRNbSYJzhoj/view?usp=drive_link" class="button android">Download for Android (APK)</a>
+			<a href="https://drive.google.com/file/d/1yWBJn2oOmuw-ID445zXVK09268pLq2O1/view?usp=drive_link" class="button android">Download for Android (APK)</a>
 		</div>
 		<div >
-			<a href="" class="button ios">for iOS (IPA) coming soon</a>
+			<a href="https://testflight.apple.com/join/5DH5YuAw" class="button ios">Download iOS (Testflight)</a>
 		</div>
 	</div>
-        <p>***แอพพลิเคชั่น Product Center สำหรับทดสอบ</p>
-    </div>
-	<div class="container">
-	<img src="main_logo.png">
-        <h1>NEO Product Center (Dev)</h1>
-        <div class="flex-container">
-		<div >
-			<a href="https://drive.google.com/file/d/1QnNVD8y_YXBBdvYKPX5ZdbDt2sk5LFu-/view?usp=drive_link" class="button android">Download for Android (APK)</a>
-		</div>
-		<div >
-			<a href="" class="button ios">for iOS (IPA) coming soon</a>
-		</div>
-	</div>
-        <p>***แอพพลิเคชั่น Product Center สำหรับทดสอบ</p>
+        <p>***แอพพลิเคชั่น NEO-Mart สำหรับทดสอบ</p>
     </div>
 </body>
 </html>
